--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive: ^2.2.3
+  cupertino_icons: ^1.0.2
+  hive: ^2.1.0
   hive_flutter: ^1.1.0
 
+
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
